--- a/study-content/note/函数式编程.md
+++ b/study-content/note/函数式编程.md
@@ -270,3 +270,17 @@ Container.of(3)
   - Monad 函子是可以变扁的 Pointed 函子，IO(IO(x))
 
   - 一个函子如果具有 join 和 of 两个方法并遵守一些定律就是一个 Monad 
+
+------
+
+
+
+#### 结语：以上内容全学习时手敲记录，无复制粘贴，全原创，希望可以给各位小伙伴带来收获，如有错误的地方或有疑问欢迎留言，感谢阅读！
+
+
+
+------
+
+
+
+# 祝各位前端程序猿前程似锦，一路向北！
